2010-06-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-menubar): Add w3m-pipe-source.
	(w3m-lynx-like-map, w3m-info-like-map): Bind "|" to w3m-pipe-source.
	(w3m-pipe-source): New command.

2010-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-update-files-autoloads): Strip subdirectory name
	that Emacs 24 doesn't strip from load-name.

2010-06-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* octet.el (octet-w3m-region): Set to unibyte string for base64
	encoding.

2010-05-24  Fedor Khod'kov  <fedor76@istra.ru>

	* w3m-cookie.el (w3m-cookie-trusted-host-p): Don't bother to add
	excessive "$" to a regexp that w3m-cookie-reject-domains specifies.

2010-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Update regexps for Google.

2010-04-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-previous-page): Save positions.

2010-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images): Use the identical Lisp object for a
	string used as w3m-image's property in order to enable XEmacs to
	display images in shimbun articles properly.

2010-03-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-active-region-or-url-at-point): Check availability of
	w3m-current-url.

2010-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-ems-create-image): New function that's an alias to
	create-animated-image or create-image.
	(w3m-create-image): Use it.

	* w3m.el (w3m-emacs-w3m-icon): Replace it with data not optimized.

2010-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_EMACS): Support Emacs 24.
	(AC_ADD_LOAD_PATH): Pipe stderr to /dev/null when running
	w3mhack-print-status.

2010-03-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-ignored-image-url-regexp): Fix custom type.

2010-03-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url-1): Don't recenter if page is not changed.